ios/chrome/browser/ui/main/main_view_controller_test.h
@@ -5,14 +5,12 @@
 #ifndef IOS_CHROME_BROWSER_UI_MAIN_MAIN_VIEW_CONTROLLER_TEST_H_
 #define IOS_CHROME_BROWSER_UI_MAIN_MAIN_VIEW_CONTROLLER_TEST_H_
 
-#import <UIKit/UIKit.h>
-
 #include "base/macros.h"
-#import "ios/chrome/test/block_cleanup_test.h"
+#import "ios/chrome/test/root_view_controller_test.h"
 
 @protocol TabSwitcher;
 
-class MainViewControllerTest : public BlockCleanupTest {
+class MainViewControllerTest : public RootViewControllerTest {
  public:
   MainViewControllerTest() = default;
   ~MainViewControllerTest() override = default;
@@ -21,18 +19,7 @@ class MainViewControllerTest : public BlockCleanupTest {
   // Creates and returns an object that conforms to the TabSwitcher protocol.
   id<TabSwitcher> CreateTestTabSwitcher();
 
-  // Sets the current key window's rootViewController and saves a pointer to
-  // the original VC to allow restoring it at the end of the test.
-  void SetRootViewController(UIViewController* new_root_view_controller);
-
-  // testing::Test implementation.
-  void TearDown() override;
-
  private:
-  // The key window's original root view controller, which must be restored at
-  // the end of the test.
-  UIViewController* original_root_view_controller_;
-
   DISALLOW_COPY_AND_ASSIGN(MainViewControllerTest);
 };
 
